[package]
name = "add_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui_extras = "0.22.0"
macroquad = "0.3.25"

rand = "0.8.5"
zip = "0.6.6"
zip-extensions = "0.6"

image = { version = "0.24", features = ["jpeg", "png"] }
egui-phosphor = "0.1.1"
jpeg-encoder = "0.5.1"
savefile = "0.13.0"
savefile-derive = "0.13.0"
